--- a/.takt/pieces/sdd.yaml
+++ b/.takt/pieces/sdd.yaml
@@ -6,7 +6,7 @@ piece_config:
       network_access: true
     opencode:
       network_access: true
-max_movements: 50
+max_movements: 80
 initial_movement: generate-requirements
 
 # --- カスタムファセット セクションマップ ---
@@ -27,6 +27,10 @@ instructions:
   validate-design: ../instructions/validate-design.md
   generate-tasks: ../instructions/generate-tasks.md
   validate-impl: ../instructions/validate-impl.md
+  plan: ../instructions/impl-plan.md
+  implement: ../instructions/impl-execute.md
+  implement-worker: ../instructions/impl-worker.md
+  merge-batch: ../instructions/merge-batch.md
 
 knowledge:
   design-discovery: ../knowledge/design-discovery.md
@@ -42,6 +46,50 @@ report_formats:
 
 # --- ループ監視 ---
 loop_monitors:
+  - cycle:
+      - plan
+      - implement
+    threshold: 5
+    judge:
+      persona: supervisor
+      instruction_template: |
+        plan と implement のバッチループが {cycle_count} 回繰り返されました。
+
+        **参照するレポート:**
+        - バッチ計画: {report:00-plan.md}
+        - 実装スコープ: {report:coder-scope.md}
+
+        **判断基準:**
+        - 各サイクルで新しいタスクが完了しているか
+        - tasks.md のチェック数が増えているか
+      rules:
+        - condition: 健全（進捗あり）
+          next: plan
+        - condition: 非生産的（改善なし）
+          next: ai_review
+
+  - cycle:
+      - plan
+      - parallel-implement
+      - merge-batch
+    threshold: 5
+    judge:
+      persona: supervisor
+      instruction_template: |
+        plan と parallel-implement のバッチループが {cycle_count} 回繰り返されました。
+
+        **参照するレポート:**
+        - バッチ計画: {report:00-plan.md}
+
+        **判断基準:**
+        - 各サイクルで新しいタスクが完了しているか
+        - tasks.md のチェック数が増えているか
+      rules:
+        - condition: 健全（進捗あり）
+          next: plan
+        - condition: 非生産的（改善なし）
+          next: ai_review
+
   - cycle:
       - ai_review
       - ai_fix
@@ -217,7 +265,8 @@ movements:
       - condition: 要件または設計が見つからない
         next: ABORT
 
-  # ===== Phase 4: 実装 =====
+  # ===== Phase 4: 適応型バッチ実装 =====
+  # スケジューラー: tasks.md の流動を見てバッチ決定
   - name: plan
     edit: false
     persona: planner
@@ -235,11 +284,25 @@ movements:
         - name: 00-plan.md
           format: plan
     rules:
-      - condition: 要件が明確で実装可能
+      - condition: 未着手の並列バッチあり
+        next: parallel-implement
+      - condition: 未着手の逐次タスクあり
         next: implement
+      - condition: 全タスク完了
+        next: ai_review
+      - condition: tasks.mdが存在しない、または空
+        next: ABORT
+        appendix: |
+          tasks.md が見つからないか空です。
+          sdd-tasks ピースを先に実行してください。
       - condition: 要件が不明確、情報不足
         next: ABORT
+        appendix: |
+          確認事項:
+          - {質問1}
+          - {質問2}
 
+  # 逐次実装: バッチ内タスクのみ実装
   - name: implement
     edit: true
     persona: coder
@@ -268,12 +331,97 @@ movements:
         - name: coder-decisions.md
           format: coder-decisions
     rules:
-      - condition: 実装完了
-        next: ai_review
-      - condition: 実装未着手（レポートのみ）
-        next: ai_review
+      - condition: バッチの実装完了
+        next: plan
+      - condition: 実装中に問題発生、計画の見直しが必要
+        next: plan
       - condition: 判断できない、情報不足
-        next: ai_review
+        next: plan
+
+  # 並列実装: (P)タスクをワーカーで並列実行
+  - name: parallel-implement
+    parallel:
+      - name: worker-1
+        edit: true
+        persona: coder
+        policy:
+          - coding
+          - testing
+        session: refresh
+        knowledge:
+          - backend
+          - architecture
+        allowed_tools:
+          - Read
+          - Glob
+          - Grep
+          - Edit
+          - Write
+          - Bash
+          - WebSearch
+          - WebFetch
+        required_permission_mode: edit
+        instruction: implement-worker
+        output_contracts:
+          report:
+            - name: worker-1-results.md
+              format: coder-scope
+        rules:
+          - condition: 担当タスク完了
+          - condition: 担当タスクなし
+          - condition: 実装失敗
+
+      - name: worker-2
+        edit: true
+        persona: coder
+        policy:
+          - coding
+          - testing
+        session: refresh
+        knowledge:
+          - backend
+          - architecture
+        allowed_tools:
+          - Read
+          - Glob
+          - Grep
+          - Edit
+          - Write
+          - Bash
+          - WebSearch
+          - WebFetch
+        required_permission_mode: edit
+        instruction: implement-worker
+        output_contracts:
+          report:
+            - name: worker-2-results.md
+              format: coder-scope
+        rules:
+          - condition: 担当タスク完了
+          - condition: 担当タスクなし
+          - condition: 実装失敗
+
+    rules:
+      - condition: any("実装失敗")
+        next: plan
+      - condition: any("担当タスク完了")
+        next: merge-batch
+      - condition: all("担当タスクなし", "担当タスクなし")
+        next: plan
+
+  # バッチ結果統合: 並列ワーカーの結果をtasks.mdに反映
+  - name: merge-batch
+    edit: true
+    persona: planner
+    allowed_tools:
+      - Read
+      - Glob
+      - Write
+    required_permission_mode: edit
+    instruction: merge-batch
+    rules:
+      - condition: 統合完了
+        next: plan
 
   - name: ai_review
     edit: false
@@ -419,6 +567,7 @@ movements:
     policy:
       - coding
       - testing
+    session: refresh
     knowledge:
       - backend
       - architecture
