chore(package): update license field to include dual licensing (MIT OR Apache-2.0)

--- a/installer/package.json
+++ b/installer/package.json
@@ -21,7 +21,7 @@
     "type": "git",
     "url": "https://github.com/j5ik2o/takt-sdd"
   },
-  "license": "MIT",
+  "license": "(MIT OR Apache-2.0)",
   "engines": {
     "node": ">=18"
   },
