--- a/.takt/ja/pieces/sdd-validate-design.yaml
+++ b/.takt/ja/pieces/sdd-validate-design.yaml
@@ -42,7 +42,7 @@ loop_monitors:
         - 同じ指摘が繰り返されていないか
       rules:
         - condition: 健全（進捗あり）
-          next: fix-design
+          next: validate-design
         - condition: 非生産的（改善なし）
           next: ABORT
 
