--- a/.takt/ja/pieces/sdd-validate-impl.yaml
+++ b/.takt/ja/pieces/sdd-validate-impl.yaml
@@ -36,7 +36,7 @@ loop_monitors:
         - 同じ指摘が繰り返されていないか
       rules:
         - condition: 健全（進捗あり）
-          next: fix-impl
+          next: validate
         - condition: 非生産的（改善なし）
           next: ABORT
 
